Removed welcome image and fixed mobile alignment

--- a/folders/styles.css
+++ b/folders/styles.css
@@ -1,3 +1,9 @@
+* {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 body {
     background-color:black;
 }
@@ -30,7 +36,7 @@ a{
 }
 
 div{
-    height:2290px;
-    width:1720px;
-    margin: auto;
+    max-height:2290px;
+    max-width:1720px;
+    margin: 0 auto;
 }
