--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 body {
     background-color:black;
 }
@@ -30,3 +36,4 @@ ul {
     padding-top:350px;
     
   }
+
